--- a/README
+++ b/README
@@ -1,1 +1,2 @@
 # SouthAfrican-ID
+As this app is very useful. But you must use Firebase as a database to save your data and just make an Indian version.
